@@ -1,27 +1,23 @@
 package com.aua.museum.booking.service.impl;
 
 
-import com.aua.museum.booking.domain.*;
+import com.aua.museum.booking.domain.Event;
+import com.aua.museum.booking.domain.EventType;
+import com.aua.museum.booking.domain.Notification;
+import com.aua.museum.booking.domain.User;
 import com.aua.museum.booking.exception.notfound.EventNotFoundException;
-import com.aua.museum.booking.mapping.EventMapper;
 import com.aua.museum.booking.repository.EventRepository;
-import com.aua.museum.booking.service.CustomEventService;
 import com.aua.museum.booking.service.EventService;
 import com.aua.museum.booking.service.EventTypeService;
 import com.aua.museum.booking.service.UserService;
 import com.aua.museum.booking.service.notifications.FCMService;
 import com.aua.museum.booking.util.DateTimeUtil;
 import com.aua.museum.booking.util.ZonedDateTimeUtil;
-import com.aua.museum.booking.domain.Event;
-import com.aua.museum.booking.domain.EventLite;
-import com.aua.museum.booking.domain.EventType;
-import com.aua.museum.booking.domain.Notification;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
-import java.nio.charset.StandardCharsets;
 import java.time.DayOfWeek;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
@@ -30,7 +26,8 @@ import java.util.*;
 import java.util.concurrent.ExecutionException;
 import java.util.stream.Collectors;
 
-import static com.aua.museum.booking.domain.EventState.*;
+import static com.aua.museum.booking.domain.EventState.BOOKED;
+import static com.aua.museum.booking.domain.EventState.PRE_BOOKED;
 import static com.aua.museum.booking.util.ZonedDateTimeUtil.getArmNowDateTime;
 import static com.aua.museum.booking.util.ZonedDateTimeUtil.getArmNowTime;
 
@@ -41,12 +38,8 @@ public class EventServiceImpl implements EventService {
     private final NotificationServiceImpl notificationService;
     private final FCMService fcmService;
     private final UserService userService;
-    private final CustomEventService myCriteriaBuilder;
-    private final EventMapper eventMapper;
     private final DateTimeUtil dateTimeUtil;
     private final EventTypeService eventTypeService;
-    private static final int MIN_HOUR = 10;
-    private static final int MAX_HOUR = 16;
 
     @Override
     public Event createEvent(Event event) {
@@ -63,22 +56,21 @@ public class EventServiceImpl implements EventService {
 
     }
 
-    private void moveEvent(Event eventToMove, Event rescheduledEvent, List<EventLite> bookedDates) {
+    private void moveEvent(Event eventToMove, Event rescheduledEvent, List<Event> bookedDates) {
 
         final int minutes = 15;
         int eventDuration = eventToMove.getEventType().getDuration();
         List<LocalTime> freeTimes;
         LocalTime nextPossibleFreeSlot;
         if (eventToMove.getDate().equals(rescheduledEvent.getDate())) {
-            List<EventLite> bookedDatesFiltered = bookedDates;
+            List<Event> bookedDatesFiltered = bookedDates;
             Map<LocalTime, Integer> bookedTimes = new HashMap<>();
             if (eventToMove.getEventType().getId() != 7) {
                 bookedDates.stream()
                         .filter(e -> e.getEventType().equals(eventToMove.getEventType()))
                         .forEach(e -> {
                             if (bookedTimes.containsKey(e.getTime())) {
-                                Integer alreadyPresent = bookedTimes.get(e.getTime());
-                                bookedTimes.put(e.getTime(), alreadyPresent + e.getGroupSize());
+                                bookedTimes.computeIfPresent(e.getTime(), (k, v) -> v + e.getGroupSize());
                             } else {
                                 bookedTimes.put(e.getTime(), e.getGroupSize());
                             }
@@ -101,7 +93,7 @@ public class EventServiceImpl implements EventService {
                 repository.save(eventToMove);
 
                 if (bookedDates != null) {
-                    bookedDates.add(eventMapper.toNoPhoto(eventToMove));
+                    bookedDates.add(eventToMove);
                 }
                 final Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
                 User user = userService.getUserByUsername(authentication.getName());
@@ -137,31 +129,22 @@ public class EventServiceImpl implements EventService {
     }
 
     @Override
-    public List<EventLite> getAllEventLites() {
-        return myCriteriaBuilder.getAllWithoutPhoto();
-    }
-
-
-    public List<EventLite> getAllEventsUniqueHour() {
-        return myCriteriaBuilder.getAllWithoutPhoto();
-    }
-
-
-    @Override
-    public List<EventLite> getActiveUsersPreBookedEvents() {
-        return myCriteriaBuilder.getActiveUsersPreBookedWithoutPhoto().stream()
-                .filter(this::eventIsPassed)
+    public List<Event> getActiveUsersPreBookedEvents() {
+        return repository.findActiveUsersPreBooked()
+                .stream()
+                .filter(this::eventIsNotPassed)
                 .collect(Collectors.toList());
     }
 
     @Override
-    public List<EventLite> getBlockedUsersPreBookedEvents() {
-        return myCriteriaBuilder.getBlockedUsersPreBookedWithoutPhoto().stream()
-                .filter(this::eventIsPassed)
+    public List<Event> getBlockedUsersPreBookedEvents() {
+        return repository.findActiveUsersPreBooked()
+                .stream()
+                .filter(this::eventIsNotPassed)
                 .collect(Collectors.toList());
     }
 
-    private boolean eventIsPassed(EventLite event) {
+    private boolean eventIsNotPassed(Event event) {
         return LocalDateTime.of(event.getDate(), event.getTime()).isAfter(ZonedDateTimeUtil.getArmNowDateTime());
     }
 
@@ -170,8 +153,8 @@ public class EventServiceImpl implements EventService {
         return repository.findAll();
     }
 
-    public List<EventLite> getBookedEventsByDate(LocalDate date) {
-        return myCriteriaBuilder.getEventsWithTimes(date);
+    public List<Event> getBookedEventsByDate(LocalDate date) {
+        return repository.findByDateAndTimeBetween(date, LocalTime.of(0, 0), LocalTime.of(23, 59));
     }
 
     //todo: is needed
@@ -204,13 +187,13 @@ public class EventServiceImpl implements EventService {
 
     @Override
     public Set<LocalTime> getFreeTimesByDateAndEventType(LocalDate date, EventType eventType, Integer groupSize) {
-        List<EventLite> bookedEventsByDate = getBookedEventsByDate(date);
+        List<Event> bookedEventsByDate = getBookedEventsByDate(date);
         Set<LocalTime> times = new TreeSet<>(dateTimeUtil.getTimes(bookedEventsByDate, eventType, date));
-        times.addAll(getCohostingHours(eventType, groupSize, bookedEventsByDate));
+        times.addAll(getCoHostingHours(eventType, groupSize, bookedEventsByDate));
         return times;
     }
 
-    private Set<LocalTime> getCohostingHours(EventType eventType, int groupSize, List<EventLite> bookedEventsByDate) {
+    private Set<LocalTime> getCoHostingHours(EventType eventType, Integer groupSize, List<Event> bookedEventsByDate) {
         Map<LocalTime, Integer> events = new HashMap<>();
         if (eventType.getId() != 7 && groupSize < 35) {
             bookedEventsByDate
@@ -229,16 +212,15 @@ public class EventServiceImpl implements EventService {
 
     @Override
     public Set<LocalTime> getFreeTimesByDateAndEvent(LocalDate date, Event event) {
-        List<EventLite> bookedEventsByDate = getBookedEventsByDate(date);
+        List<Event> bookedEventsByDate = getBookedEventsByDate(date);
         Set<LocalTime> times = new TreeSet<>(dateTimeUtil.getTimesForMove(bookedEventsByDate, date, event));
-        times.addAll(getCohostingHours(event.getEventType(), event.getGroupSize(), bookedEventsByDate));
+        times.addAll(getCoHostingHours(event.getEventType(), event.getGroupSize(), bookedEventsByDate));
         return times;
     }
 
-    private void addToMap(Map<LocalTime, Integer> events, EventLite e) {
+    private void addToMap(Map<LocalTime, Integer> events, Event e) {
         if (events.containsKey(e.getTime())) {
-            Integer alreadyPresent = events.get(e.getTime());
-            events.put(e.getTime(), alreadyPresent + e.getGroupSize());
+            events.computeIfPresent(e.getTime(),(time,size) -> size+e.getGroupSize());
         } else {
             events.put(e.getTime(), e.getGroupSize());
         }
@@ -279,14 +261,14 @@ public class EventServiceImpl implements EventService {
 
         List<Event> eventsToBeMoved = events.stream()
                 .filter(e -> checkIfOverlaps(rescheduledEvent, e))
-                .collect(Collectors.toList());
+                .toList();
 
-        List<EventLite> bookedEventsByDate = getBookedEventsByDate(rescheduledEvent.getDate());
+        List<Event> bookedEventsByDate = getBookedEventsByDate(rescheduledEvent.getDate());
 
         List<LocalTime> toBeMovedTimes = eventsToBeMoved.stream()
                 .map(Event::getTime)
-                .collect(Collectors.toList());
-        List<EventLite> bookedDates = bookedEventsByDate.stream()
+                .toList();
+        List<Event> bookedDates = bookedEventsByDate.stream()
                 .filter(e -> !toBeMovedTimes.contains(e.getTime()) || e.getId().equals(rescheduledEvent.getId()))
                 .collect(Collectors.toList());
 
@@ -322,7 +304,7 @@ public class EventServiceImpl implements EventService {
     }
 
     @Override
-    public Map<Object, Object> eventToMap(EventLite event, Locale locale) {
+    public Map<Object, Object> eventToMap(Event event, Locale locale) {
         Map<Object, Object> map = new HashMap<>();
         map.put("type", event.getEventType().getDisplayValue_EN().toLowerCase());
 
@@ -346,7 +328,8 @@ public class EventServiceImpl implements EventService {
         map.put("username", event.getUser().getUsername());
 
         List<Integer> groupSizes = new ArrayList<>();
-        List<EventLite> events = myCriteriaBuilder.getAllWithoutPhoto().stream().filter(eventLite -> eventLite.getDate().equals(event.getDate()) && eventLite.getTime().equals(event.getTime())).collect(Collectors.toList());
+
+        List<Event> events = repository.findAll().stream().filter(e -> e.getDate().equals(event.getDate()) && e.getTime().equals(event.getTime())).collect(Collectors.toList());
         events.remove(event);
         events.forEach(e -> groupSizes.add(e.getGroupSize()));
         map.put("groupSizes", groupSizes);
@@ -357,12 +340,5 @@ public class EventServiceImpl implements EventService {
 
     private Boolean isWithinTime(LocalTime timeToCheck, LocalTime startTime, LocalTime endTime) {
         return timeToCheck.isAfter(startTime) && timeToCheck.isBefore(endTime);
-    }
-
-    @Override
-    public String extractEventPhoto(Event event) {
-        if (event.getEventPhoto() == null) return null;
-        byte[] encode = Base64.getEncoder().encode(event.getEventPhoto());
-        return new String(encode, StandardCharsets.UTF_8);
     }
 }
